<?xml version="1.0"?>
<package format="2">
  <name>MP_DR_T18</name>
  <version>1.0.0</version>
  <description>The MP_DR_T18 package</description>
  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>interiit22</build_depend>
  <build_depend>prius_description</build_depend>
  <build_depend>prius_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>interiit22</build_export_depend>
  <build_export_depend>prius_description</build_export_depend>
  <build_export_depend>prius_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>interiit22</exec_depend>
  <exec_depend>prius_description</exec_depend>
  <exec_depend>prius_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
